--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,7 +1,7 @@
 {
 "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 "logo": {
-        "source": "/Users/sverrebesteman/.config/fastfetch/logos/Untitled.txt",
+        "source": "~/.config/fastfetch/logos/Untitled.txt",
         "padding": {
           "top": 2,
           "bottom": 2
